--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,10 @@
       padding: 0;
     }
 
+    body {
+      height: 100vh;
+    }
+
     /* Volume Slider */
     .MuiSlider-thumb {
       color: brown;
